--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -194,6 +194,8 @@ p {
 .graphicPhotography__graphic, .graphicPhotography__photography {
   width: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
   font-size: 0;
   z-index: -1;
 }
@@ -208,7 +210,9 @@ p {
 .graphicPhotography__graphic--text, .graphicPhotography__photography--text {
   text-align: center;
   position: absolute;
-  padding: 6rem 2.4rem;
+  padding: 3rem 2.4rem;
+  display: grid;
+  gap: 2.7rem;
   bottom: 0;
 }
 .graphicPhotography__graphic--text-heading, .graphicPhotography__photography--text-heading {
@@ -221,6 +225,7 @@ p {
   mix-blend-mode: normal;
 }
 .graphicPhotography__graphic--text-p, .graphicPhotography__photography--text-p {
+  max-width: 33.9rem;
   font-family: "Barlow", sans-serif;
   font-size: 1.6rem;
   line-height: 2.7rem;
@@ -412,6 +417,7 @@ p {
   -moz-transition: all 0.5s;
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
+  z-index: 1000;
 }
 @media screen and (min-width: 768px) {
   .nav {
@@ -480,9 +486,6 @@ p {
 }
 .nav__hamburger--active {
   cursor: pointer;
-}
-.nav__hamburger--active path {
-  fill: rgba(255, 255, 255, 0.5);
 }
 .nav__menu {
   background-color: #fff;
