--- a/src/styles/sass/sections/__graphicPhotography.scss
+++ b/src/styles/sass/sections/__graphicPhotography.scss
@@ -9,6 +9,8 @@
     &__photography {
         width: 100%;
         position: relative;
+        display: flex;
+        justify-content: center;
         font-size: 0;
         z-index: -1;
         @media screen and (min-width: $tablet) {
@@ -20,7 +22,9 @@
         &--text {
             text-align: center;
             position: absolute;
-            padding: 6rem 2.4rem;
+            padding: 3rem 2.4rem;
+            display: grid;
+            gap: 2.7rem;
             bottom: 0;
             &-heading {
                 text-transform: capitalize;
@@ -32,6 +36,7 @@
                 mix-blend-mode: normal;
             }
             &-p {
+                max-width: 33.9rem;
                 font-family: $barlow;
                 font-size: 1.6rem;
                 line-height: 2.7rem;
