--- a/src/styles/sass/sections/__nav.scss
+++ b/src/styles/sass/sections/__nav.scss
@@ -18,6 +18,7 @@
     -moz-transition: all 0.5s;
     -ms-transition: all 0.5s;
     -o-transition: all 0.5s;
+    z-index: 1000;
     @media screen and (min-width: $tablet) {
         padding: 3.4rem 4.5rem;
     }
@@ -87,7 +88,7 @@
         &--active {
             cursor: pointer;
             & path {
-                fill: rgba(255, 255, 255, 0.5);
+                // fill: rgba(255, 255, 255, 0.5);
             }
         }
     }
