--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -465,8 +465,8 @@ p {
   -o-transition: all 0.2s;
 }
 .navLinks__link--contact a:hover {
-  color: #fff;
-  background-color: rgba(255, 255, 255, 0.25);
+  color: #fff !important;
+  background-color: rgba(255, 255, 255, 0.25) !important;
   transition: all 0.2s;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
