--- a/src/styles/sass/sections/__nav.scss
+++ b/src/styles/sass/sections/__nav.scss
@@ -63,8 +63,8 @@
                     -ms-transition: all 0.2s;
                     -o-transition: all 0.2s;
                     &:hover {
-                        color: #fff;
-                        background-color: rgba(255, 255, 255, 0.25);
+                        color: #fff !important;
+                        background-color: rgba(255, 255, 255, 0.25) !important;
                         transition: all 0.2s;
                         -webkit-transition: all 0.2s;
                         -moz-transition: all 0.2s;
