--- a/src/styles/sass/sections/__footer.scss
+++ b/src/styles/sass/sections/__footer.scss
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 4rem 7rem;
     margin: auto;
+    max-width: 172.8rem;
     @media screen and (min-width: $tablet) {
         padding: 7.2rem 0;
     }
