--- a/src/styles/sass/sections/__nav.scss
+++ b/src/styles/sass/sections/__nav.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    max-width: 172.8rem;
     padding: 3.2rem 2.4rem;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
